--- a/index.html
+++ b/index.html
@@ -1,14 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-	<meta charset="utf-8">
 	<title>froger</title>
+	<link rel="stylesheet" href="style.css">
 
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.0/p5.js"></script>
-
+	<meta charset="utf-8" />
 </head>
 
 <body>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.2/p5.min.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.2/addons/p5.sound.min.js"></script>
+	<script src="https://p5play.org/v3/planck.js"></script>
+	<script src="https://p5play.org/v3/p5.play.js"></script>
+
 	<script src="sketch.js"></script>
 </body>
 
