--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-	<title>froger</title>
+	<title>1942</title>
 	<link rel="stylesheet" href="style.css">
 
 	<meta charset="utf-8" />
