--- a/index.html
+++ b/index.html
@@ -1,20 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
-	<title>1942</title>
-	<link rel="stylesheet" href="style.css">
+    <title>1942</title>
+    <link rel="stylesheet" href="style.css">
 
-	<meta charset="utf-8" />
+    <meta charset="utf-8" />
 </head>
-
 <body>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.2/p5.min.js"></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.2/addons/p5.sound.min.js"></script>
-	<script src="https://p5play.org/v3/planck.js"></script>
-	<script src="https://p5play.org/v3/p5.play.js"></script>
-
-	<script src="sketch.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.2/p5.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.2/addons/p5.sound.min.js"></script>
+    <script src="https://p5play.org/v3/planck.js"></script>
+    <script src="https://p5play.org/v3/p5.play.js"></script>
+    <script src="sketch.js"></script>
+    <div>Este juego es creado por Silveyra,Ariza y Coronel</div></div>
+    <input type="button" value="Recargar" onclick="location.reload()"/>
+    
+    
 </body>
-
-</html>
